partial main section

--- a/frontend.html
+++ b/frontend.html
@@ -18,7 +18,44 @@
         </section>
     </header>
     <main>
-
+       <div class="FF">
+        <p>Our Featured Flowers</p>
+        <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+       </div>
+       <section class="flowers_section">
+        <div>
+            <img src="assests/pngwing 6.png">
+            <p><u>Pink Flower Tree</u></p>
+        </div>
+        <div>
+            <img src="assests/pngwing 5.png">
+            <p><u>Pink Flower Tree</u></p>
+        </div>
+        <div>
+            <img src="assests/pngwing 7.png">
+            <p><u>Pink Flower Tree</u></p>
+        </div>
+       </section>
+       <section class="support_section">
+        <div>
+            <img src="assests/Group 57.png">
+            <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div>
+            <img src="assests/Group 58.png">
+            <p>Fresh Flowers. Local Growers.</p>
+        </div>
+        <div>
+            <img src="assests/Group 59.png">
+            <p>24/7 Free Support.</p>
+        </div>
+       </section>
+       <section class="hot_deal">
+        <div><p>Hot Deal ! Sale Up To 25% Off</p>
+        <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+        <button>Sign up</button></div>
+        <div><img src="assests/pngwing 8.png" alt=""></div>
+       </section>
     </main>
     <footer>
         
