--- a/frontend.html
+++ b/frontend.html
@@ -56,6 +56,23 @@
         <button>Sign up</button></div>
         <div><img src="assests/pngwing 8.png" alt=""></div>
        </section>
+       <div class="instagram">
+        <p>Instagram</p>
+        <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+       </div>
+    <section class="flower">
+        <div><img src="assests/Flower 01.png" alt=""></div>
+        <div><img src="assests/Rectangle 4.png" alt=""></div>
+        <div><img src="assests/Rectangle 5.png" alt=""></div>
+        <div><img src="assests/Rectangle 6.png" alt=""></div>
+    </section>
+    <div class="deals">
+        <img src="assests/Rectangle 9.png">
+        <div>
+            <p>Get The Latest Deals</p>
+            <div class="container"><input type="email" placeholder="Enter you email here...."><button>Subscribe</button></div>
+        </div>
+    </div>
     </main>
     <footer>
         
