--- a/frontend.html
+++ b/frontend.html
@@ -75,7 +75,11 @@
     </div>
     </main>
     <footer>
-        
+        <section class="footer_section">
+            <p>FlowerShop</p>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p>@2020-2023, FlowerShop.com. All rights reserved.</p>
+        </section>
     </footer>
 </body>
 </html>
